@@ -1,3 +1,10 @@
+Sun Mar 04 22:43:22 2001  George Lebl <jirka@5z.com>
+
+	* gnome-run.c: find and set envariomental variables for exec
+	  shell style.  Fix a small leak, enable command completion on
+	  Ctrl-Tab, if it were on tab it would make keyboard navigation
+	  impossible.
+
 Sun Mar 04 14:19:15 2001  George Lebl <jirka@5z.com>
 
 	* global-keys.c: clean up the modifiers patch to actually compile
